# tmu

./: .gitignore  Attention_8c.html  Attention_8c__incl.map  Attention_8c__incl.md5  Attention_8h.html  Attention_8h__dep__incl.map  Attention_8h__dep__incl.md5  Attention_8h_source.html  BillionWordsPredictionDemo_8py.html  CIFAR100CoalescedDemo3x3LiteralBudget_8py.html  CIFAR100CoalescedDemo3x3_8py.html  CIFAR100Demo3x3_8py.html  CIFAR100MultiTaskDemo3x3_8py.html  CIFAR100MultiTaskSampleDemo3x3_8py.html  CIFAR10CoalescedDemo3x3LiteralBudget_8py.html  CIFAR10CoalescedDemo3x3_8py.html  CIFAR10CoalescedDemo_8py.html  CIFAR10DemoS_8py.html  CIFAR10Demo_8py.html  CIFAR10MultiTaskSampleDemo3x3_8py.html  CIFAR2Demo3x3HSVLiteralBudget_8py.html  CIFAR2Demo3x3LiteralBudgetSpecificity_8py.html  CIFAR2Demo3x3RGCLiteralBudget_8py.html  CIFAR2Histogram_8py.html  CIFAR2VisualTokensHyperVector_8py.html  CIFARDemo3x3_8py.html  CIFARDemoVanilla3x3_8py.html  ClauseBankSparse_8c.html  ClauseBankSparse_8c__incl.map  ClauseBankSparse_8c__incl.md5  ClauseBankSparse_8h.html  ClauseBankSparse_8h__dep__incl.map  ClauseBankSparse_8h__dep__incl.md5  ClauseBankSparse_8h_source.html  ClauseBank_8c.html  ClauseBank_8c__incl.map  ClauseBank_8c__incl.md5  ClauseBank_8h.html  ClauseBank_8h__dep__incl.map  ClauseBank_8h__dep__incl.md5  (+1231 more)
docs/: description.txt  long_description.rst
examples/: BillionWordsPredictionDemo.py  CIFAR100CoalescedDemo3x3.py  CIFAR100CoalescedDemo3x3LiteralBudget.py  CIFAR100Demo3x3.py  CIFAR100MultiTaskDemo3x3.py  CIFAR100MultiTaskSampleDemo3x3.py  CIFAR10CoalescedDemo3x3.py  CIFAR10CoalescedDemo3x3LiteralBudget.py  CIFAR10MultiTaskSampleDemo3x3.py  CIFAR2Demo3x3LiteralBudget.py  CIFARDemo3x3.py  CIFARDemoOneVsOne.py  CIFARDemoOneVsOne3x3.py  CIFARDemoVanilla3x3.py  FashionMNISTDemo2DConvolutionOneVsOne.py  FashionMNISTDemo3x3.py  IMDbAutoEncoderDemo.py  IMDbMultiWordPredictionDemo.py  IMDbMultiWordPredictionDemoCoalesced.py  IMDbTextCategorizationDemo.py  IMDbTextCategorizationDemoTypeIIIFeedback.py  IMDbWordEmbeddingDemo.py  IMDbWordPredictionDemo.py  IMDbWordPredictionMultiTaskDemo.py  InterpretabilityDemo.py  InterpretabilityDemoAND.py  InterpretabilityDemoCoalesced.py  InterpretabilityDemoOneVsOne.py  MNISTClauseCoOccurrenceDemo.py  MNISTConvolutionLiteralBudgetDemo.py  MNISTDemo.py  MNISTDemo2DConvolutionOneVsOne.py  MNISTDemo2DConvolutionWeightedClauses.py  MNISTDemo2DConvolutionWeightedClausesFocusedNegativeSampling.py  MNISTDemo2DConvolutionWeightedClausesIncremental.py  MNISTDemoCoalesced.py  MNISTDemoCoalescedFocusedNegativeSampling.py  MNISTDemoCoalescedTypeIIIFeedback.py  MNISTDemoOneVsOne.py  MNISTDemoTrainLayerOne.py  (+7 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+95 more)
test/: test_classifiers.py  test_components.py  test_datasets.py  test_imports.py  test_pickle.py
tmu/: ClauseBank.c  ClauseBank.h  Tools.c  Tools.h  WeightBank.c  WeightBank.h  __init__.py  attention.py  clause_bank.py  clause_bank_cuda.py  clause_bank_cuda_kernels.py  clause_bank_extension_build.py  clause_bank_sparse.py  clause_weight_bank.py  data.py  datasets.py  logging_example.json  tools.py  tools_extension_build.py  tsetlin_machine.py  weight_bank.py  weight_bank_extension_build.py
tmu/lib/: CMakeLists.txt  main.c  pyproject.toml  setup.py  tmulib_extension_build.py
tmu/lib/cpp/: main.cpp
tmu/lib/cpp/include/: tm_clause_dense.h  tm_memory.h  tm_weight_bank.h
tmu/lib/cpp/include/models/classifiers/: tm_vanilla.h
tmu/lib/cpp/include/utils/: sparse_clause_container.h  tm_dataset.h  tm_math.h
tmu/lib/cpp/nb/: tmulibcpp.cpp
tmu/lib/cpp/scripts/: STM32L475VGTX_FLASH.ld  build_stm32.sh  stm32l4_toolchain.cmake
tmu/lib/cpp/src/: memory.cpp
tmu/lib/cpp/tests/: MNISTDemoCPP.py  mnist_generator.py  test_lib.py
tmu/lib/include/: Attention.h  ClauseBank.h  ClauseBankSparse.h  ClauseWeightBank.h  Tools.h  WeightBank.h  fast_rand.h  fast_rand_seed.h
tmu/lib/src/: Attention.c  ClauseBank.c  ClauseBankSparse.c  ClauseWeightBank.c  Tools.c  WeightBank.c
tmu/lib/src/random/: pcg32_fast.c  rdrand.c  xorshift128.c
tmu/lib/test/: test_main.c  test_weight_bank.cpp
wheels/: dev-tmu-0.8.1-cp310-cp310-linux_i686.whl  dev-tmu-0.8.1-cp310-cp310-linux_x86_64.whl  dev-tmu-0.8.1-cp310-cp310-macosx_10_9_x86_64.whl  dev-tmu-0.8.1-cp310-cp310-win_amd64.whl  dev-tmu-0.8.1-cp311-cp311-linux_i686.whl  dev-tmu-0.8.1-cp311-cp311-linux_x86_64.whl  dev-tmu-0.8.1-cp311-cp311-macosx_10_9_x86_64.whl  dev-tmu-0.8.1-cp311-cp311-win_amd64.whl  dev-tmu-0.8.1-cp312-cp312-linux_i686.whl  dev-tmu-0.8.1-cp312-cp312-linux_x86_64.whl  dev-tmu-0.8.1-cp312-cp312-macosx_10_9_x86_64.whl  dev-tmu-0.8.1-cp312-cp312-win_amd64.whl  dev-tmu-0.8.1-pp310-pypy310_pp73-linux_x86_64.whl  dev-tmu-0.8.1-pp310-pypy310_pp73-macosx_10_9_x86_64.whl  dev-tmu-0.8.1-pp310-pypy310_pp73-win_amd64.whl  feature_automatic_build-tmu-0.7.9-cp310-cp310-macosx_10_9_x86_64.whl  feature_automatic_build-tmu-0.7.9-cp310-cp310-manylinux_2_5_i686.manylinux1_i686.manylinux_2_17_i686.manylinux2014_i686.whl  feature_automatic_build-tmu-0.7.9-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  feature_automatic_build-tmu-0.7.9-cp310-cp310-musllinux_1_1_i686.whl  feature_automatic_build-tmu-0.7.9-cp310-cp310-musllinux_1_1_x86_64.whl  feature_automatic_build-tmu-0.7.9-cp310-cp310-win32.whl  feature_automatic_build-tmu-0.7.9-cp310-cp310-win_amd64.whl  feature_automatic_build-tmu-0.7.9-cp311-cp311-macosx_10_9_x86_64.whl  feature_automatic_build-tmu-0.7.9-cp311-cp311-manylinux_2_5_i686.manylinux1_i686.manylinux_2_17_i686.manylinux2014_i686.whl  feature_automatic_build-tmu-0.7.9-cp311-cp311-musllinux_1_1_i686.whl  (+488 more)
(+195 files in other folders)
