[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build", # For CMake support
    "cmake",
    "ninja",
    "nanobind"
]
build-backend = "setuptools.build_meta"

[project]
name = "tmulibpy"
version = "0.1.0"
description = "A Python wrapper for tmulibpp library"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = {"text" = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://yourprojecthomepage.com"
Repository = "https://github.com/yourusername/tumlibpp"
